# lophiid

./: .bazelrc  .dockerignore  .env  .env.agent  .env.backend  .gitignore  .pr_agent.toml  AI.md  API_CLIENT.md  BUILD  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DETAILED_DESCRIPTION.md  Dockerfile.agent  Dockerfile.api  Dockerfile.backend  Dockerfile.triage  Dockerfile.ui  INSTALL  LICENSE  MODULE.bazel  PAYLOAD_FETCHING.md  QUICK_START.md  README.md  SCREENSHOTS.md  SCRIPTING.md  SEARCH.md  SEARCH_KEYWORDS.md  SETUP.md  SETUP_AGENT.md  TEMPLATING.md  TODO  WORKSPACE  backend_service.proto  compile_proto.sh  deps.bzl  docker-compose.agent.yml  docker-compose.certs.yml  docker-compose.override.yml  (+7 more)
backend_service/: BUILD.bazel  backend_service.pb.go  backend_service_grpc.pb.go
cmd/agent/: BUILD.bazel  agent_cli.go  client_main.go
cmd/api/: BUILD.bazel  api_server.go
cmd/api_client/: BUILD.bazel  api_client.go  api_client_cli.go
cmd/backend/: BUILD.bazel  backend.go  backend_main.go
cmd/client/: BUILD.bazel  client_main.go
cmd/database/: BUILD.bazel  db_cli.go
cmd/downloader/: BUILD.bazel  downloader.go
cmd/gendoc/: BUILD.bazel  gendoc_cli.go  main.go
cmd/javascript/: BUILD.bazel  main.go
cmd/links_fetcher/: BUILD.bazel  links_fetcher_cli.go  main.go
cmd/llm/: BUILD.bazel  llm_cli.go  main.go
cmd/triage/: BUILD.bazel  main.go  triage_cli.go
cmd/vt/: BUILD.bazel  main.go
cmd/whois/: BUILD.bazel  main.go
cmd/yara/: BUILD.bazel  main.go  yara_cli.go
config/: agent-config.yaml  api-config.yaml  backend-config.yaml  campaign-agent-config.yaml  database-inserts.sql  database.sql  database.sql.simple  env.agent.template  env.backend.template  nginx.prod.conf  nginx.ui.conf  rule-generation-agent-config.yaml
docs/: CAMPAIGNS.md  GEOIPLOCATION.md
pkg/agent/: BUILD.bazel  agent.go  agent_test.go  http_server.go  http_server_test.go  p0f_runner.go  ping.go  ping_test.go
pkg/alerting/: BUILD.bazel  alerting.go  alerting_test.go  log.go  telegram.go
pkg/analysis/: BUILD.bazel  iat_variance.go  iat_variance_test.go  ip.go  ip_test.go  metrics.go
pkg/api/: BUILD.bazel  client.go  client_test.go  content_rule_test.go  generic_client.go  generic_client_test.go  server.go  server_test.go  stats.go  stats_test.go
pkg/api/cli/: BUILD.bazel  cli.go  cli_test.go
pkg/backend/: BUILD.bazel  backend.go  backend_test.go  client.go  config.go  matching.go  matching_test.go  metrics.go  process.go  process_test.go  queries.go  queries_test.go  request_queue.go  request_queue_test.go  rule_cache.go  rule_cache_test.go  safe_rules.go  session_cache.go  session_cache_test.go  util.go  util_test.go
pkg/backend/auth/: BUILD.bazel  auth.go  auth_test.go
pkg/backend/extractors/: BUILD.bazel  base64_extractor.go  base64_extractor_test.go  extractor_collection.go  extractor_collection_test.go  extractors.go  extractors_test.go  nc_extractor.go  nc_extractor_test.go  ping_extractor.go  ping_extractor_test.go  tcp_extractor.go  tcp_extractor_test.go  unicode_extractor.go  unicode_extractor_test.go  url_extractor.go  url_extractor_test.go
pkg/backend/ratelimit/: BUILD.bazel  metrics.go  ratelimit.go  ratelimit_test.go
pkg/backend/responder/: BUILD.bazel  llm_prompts.go  llm_responder.go  llm_responder_test.go  responder.go  responder_manager.go
pkg/backend/rules/: safe_rules.go
pkg/backend/session/: BUILD.bazel  fake_session.go  metrics.go  session.go  session_test.go
pkg/basehash/: BUILD.bazel  manager.go
pkg/client/: BUILD.bazel  client.go
pkg/database/: BUILD.bazel  database.go  database_test.go  fake_database.go  hashing.go  hashing_test.go  queries.go  query.go  query_test.go  search_config.go
pkg/database/models/: BUILD.bazel  app_per_group.go  app_per_group_join.go  application.go  base_hash.go  campaign.go  campaign_request.go  content.go  content_rule.go  download.go  honeypot.go  ioc.go  ip_event.go  kill_chain.go  llm_code_execution.go  models.go  p0f_result.go  request.go  request_description.go  request_metadata.go  rule_group.go  rule_management_log.go  rule_per_group.go  rule_per_group_join.go  session.go  session_content_rule.go  session_execution_context.go  session_test.go  single_kill_chain_phase.go  stored_query.go  tag.go  tag_per_query.go  tag_per_request.go  tag_per_rule.go  temporary_content_rule.go  whois.go  yammablebytes.go  yara.go
pkg/database/rules/: BUILD.bazel
pkg/downloader/: BUILD.bazel  downloader.go  downloader_test.go
pkg/html/: BUILD.bazel  html.go  html_test.go  scrape.go  scrape_test.go
pkg/javascript/: BUILD.bazel  command_runner.go  command_runner_test.go  crypto.go  database.go  encoding.go  goja.go  goja_test.go  logger.go  metrics.go  random.go  shell.go  time.go  wrappers.go
pkg/llm/: BUILD.bazel  config.go  gemini.go  google.go  llm.go  llm_manager.go  llm_manager_test.go  metrics.go  mock_llm_manager.go  openai.go  openai_test.go  util.go
pkg/llm/code/: code.go  code_test.go
pkg/llm/file/: file.go  file_access.go
pkg/llm/interpreter/: fake.go  inter.go
pkg/llm/shell/: BUILD.bazel  shell.go  shell_test.go
pkg/llm/sql/: sql.go  sql_test.go
pkg/llm/tools/: tools.go  tools_test.go
pkg/request_describer/: BUILD.bazel  manager.go  manager_test.go  metrics.go
pkg/util/: BUILD.bazel  command.go  command_test.go  compare.go  contains.go  event.go  event_test.go  file.go  general.go  general_test.go  http.go  http_test.go  llm.go  llm_test.go  logging.go  net.go  net_test.go  queue.go  rotating_log.go  rotating_log_test.go  security.go  string_map_cache.go  string_map_cache_test.go  versioning.go  versioning_test.go
pkg/util/constants/: BUILD.bazel  shared_constants.go
pkg/util/decoding/: BUILD.bazel  decoding.go  decoding_test.go
pkg/util/logutil/: logging.go  logging_test.go
pkg/util/shell/: BUILD.bazel  commands.go  expander.go  expander_test.go  reader.go  reader_test.go
pkg/util/templator/: BUILD.bazel  date.go  random_string.go  random_string_test.go  templator.go  templator_test.go
pkg/vt/: BUILD.bazel  manager.go  manager_test.go  metrics.go  vt.go  vt_test.go
(+248 files in other folders)
