load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client_main.go"],
    importpath = "loophid/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/agent",
        "//pkg/client",
        "//pkg/http/server",
        "@com_github_kkyr_fig//:fig",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
