load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client_main.go"],
    importpath = "loophid/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/agent",
        "//pkg/client",
        "//pkg/http/server",
        "@com_github_kkyr_fig//:fig",
    ],
)

go_binary(
    name = "client",
    embed = [":agent_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "agent_lib",
    srcs = ["client_main.go"],
    importpath = "loophid/cmd/agent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/agent",
        "//pkg/backend",
        "//pkg/util",
        "@com_github_kkyr_fig//:fig",
        "@com_github_mrheinen_p0fclient//:p0fclient",
    ],
)
