load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["api_server.go"],
    importpath = "loophid/cmd/api",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api",
        "//pkg/database",
        "@com_github_gorilla_mux//:mux",
        "@com_github_rs_cors//:go_default_library",
        "@com_github_vingarcia_ksql//:ksql",
        "@com_github_vingarcia_ksql_adapters_kpgx5//:kpgx5",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)
