load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["api_server.go"],
    importpath = "loophid/cmd/api",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api",
        "//pkg/database",
        "//pkg/javascript",
        "//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_mux//:mux",
        "@com_github_kkyr_fig//:fig",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_rs_cors//:cors",
        "@com_github_vingarcia_ksql//:ksql",
        "@com_github_vingarcia_ksql_adapters_kpgx5//:kpgx5",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)
