load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "backend_lib",
    srcs = ["backend_main.go"],
    importpath = "loophid/cmd/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//backend_service",
        "//pkg/backend",
        "//pkg/database",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "backend",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],
)
