load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "backend_lib",
    srcs = ["backend_main.go"],
    importpath = "loophid/cmd/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//backend_service",
        "//pkg/alerting",
        "//pkg/backend",
        "//pkg/database",
        "//pkg/downloader",
        "//pkg/javascript",
        "//pkg/vt",
        "//pkg/whois",
        "@com_github_vingarcia_ksql//:ksql",
        "@com_github_vingarcia_ksql_adapters_kpgx5//:kpgx5",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
    ],
)

go_binary(
    name = "backend",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],
)
