load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "backend_lib",
    srcs = ["backend_main.go"],
    importpath = "lophiid/cmd/backend",
    visibility = ["//visibility:private"],
    deps = [
        "//backend_service",
        "//pkg/alerting",
        "//pkg/analysis",
        "//pkg/backend",
        "//pkg/backend/auth",
        "//pkg/backend/ratelimit",
        "//pkg/backend/responder",
        "//pkg/database",
        "//pkg/javascript",
        "//pkg/llm",
        "//pkg/util",
        "//pkg/vt",
        "//pkg/whois",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_kkyr_fig//:fig",
        "@com_github_openrdap_rdap//:rdap",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_vingarcia_ksql_adapters_kpgx5//:kpgx5",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "backend",
    embed = [":backend_lib"],
    visibility = ["//visibility:public"],
)
