load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "database_lib",
    srcs = ["db_cli.go"],
    importpath = "loophid/cmd/database",
    visibility = ["//visibility:private"],
    deps = ["//pkg/database"],
)

go_binary(
    name = "database",
    embed = [":database_lib"],
    visibility = ["//visibility:public"],
)
