load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "javascript_lib",
    srcs = ["main.go"],
    importpath = "loophid/cmd/javascript",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/database",
        "//pkg/javascript",
    ],
)

go_binary(
    name = "javascript",
    embed = [":javascript_lib"],
    visibility = ["//visibility:public"],
)
