load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "triage",
    embed = [":triage_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "triage_lib",
    srcs = ["main.go"],
    importpath = "lophiid/cmd/triage",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/analysis",
        "//pkg/backend",
        "//pkg/database",
        "//pkg/llm",
        "//pkg/triage/describer",
        "//pkg/util",
        "@com_github_kkyr_fig//:fig",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_vingarcia_ksql//:ksql",
        "@com_github_vingarcia_ksql_adapters_kpgx5//:kpgx5",
    ],
)
