load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agent",
    srcs = ["agent.go"],
    importpath = "loophid/pkg/agent",
    visibility = ["//visibility:public"],
    deps = [
        "//backend_service",
        "//pkg/client",
        "//pkg/http/server",
    ],
)

go_test(
    name = "agent_test",
    srcs = ["agent_test.go"],
    embed = [":agent"],
    deps = [
        "//backend_service",
        "//pkg/http/server",
    ],
)
