load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agent",
    srcs = [
        "agent.go",
        "http_server.go",
        "p0f_runner.go",
        "ping.go",
    ],
    importpath = "lophiid/pkg/agent",
    visibility = ["//visibility:public"],
    deps = [
        "//backend_service",
        "//pkg/backend",
        "//pkg/util",
        "//pkg/util/constants",
        "@com_github_mrheinen_magicmime//:magicmime",
        "@com_github_mrheinen_p0fclient//:p0fclient",
        "@com_github_prometheus_community_pro_bing//:pro-bing",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "agent_test",
    srcs = [
        "agent_test.go",
        "http_server_test.go",
    ],
    embed = [":agent"],
    deps = [
        "//backend_service",
        "//pkg/backend",
        "//pkg/util",
        "@com_github_mrheinen_p0fclient//:p0fclient",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
