load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "client.go",
        "server.go",
    ],
    importpath = "lophiid/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//backend_service",
        "//pkg/database",
        "//pkg/javascript",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "client_test.go",
        "server_test.go",
    ],
    embed = [":api"],
    deps = [
        "//pkg/database",
        "//pkg/javascript",
        "@com_github_jackc_pgx_v5//pgtype",
    ],
)
