load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "generic_client.go",
        "server.go",
    ],
    importpath = "lophiid/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//backend_service",
        "//pkg/backend/extractors",
        "//pkg/database",
        "//pkg/javascript",
        "//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "generic_client_test.go",
        "server_test.go",
    ],
    embed = [":api"],
    deps = [
        "//pkg/database",
        "//pkg/javascript",
        "@com_github_jackc_pgx_v5//pgtype",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)
