load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "backend",
    srcs = [
        "backend.go",
        "metrics.go",
        "queries.go",
        "request_queue.go",
        "rule_cache.go",
        "safe_rules.go",
        "util.go",
    ],
    importpath = "loophid/pkg/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//backend_service",
        "//pkg/alerting",
        "//pkg/backend/extractors",
        "//pkg/database",
        "//pkg/javascript",
        "//pkg/metrics",
        "//pkg/util",
        "//pkg/vt",
        "//pkg/whois",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_vingarcia_ksql//:ksql",
    ],
)

go_test(
    name = "backend_test",
    srcs = [
        "backend_test.go",
        "queries_test.go",
        "request_queue_test.go",
        "rule_cache_test.go",
    ],
    embed = [":backend"],
    deps = [
        "//backend_service",
        "//pkg/alerting",
        "//pkg/database",
        "//pkg/javascript",
        "//pkg/vt",
        "//pkg/whois",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)
