load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "backend",
    srcs = [
        "backend.go",
        "client.go",
        "config.go",
        "metrics.go",
        "queries.go",
        "request_queue.go",
        "safe_rules.go",
        "util.go",
    ],
    importpath = "lophiid/pkg/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//backend_service",
        "//pkg/alerting",
        "//pkg/analysis",
        "//pkg/backend/auth",
        "//pkg/backend/extractors",
        "//pkg/backend/ratelimit",
        "//pkg/backend/responder",
        "//pkg/backend/session",
        "//pkg/database",
        "//pkg/javascript",
        "//pkg/metrics",
        "//pkg/util",
        "//pkg/util/constants",
        "//pkg/util/decoding",
        "//pkg/vt",
        "//pkg/whois",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_vingarcia_ksql//:ksql",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "backend_test",
    srcs = [
        "backend_test.go",
        "queries_test.go",
        "request_queue_test.go",
        "util_test.go",
    ],
    embed = [":backend"],
    deps = [
        "//backend_service",
        "//pkg/alerting",
        "//pkg/analysis",
        "//pkg/backend/auth",
        "//pkg/backend/extractors",
        "//pkg/backend/ratelimit",
        "//pkg/backend/responder",
        "//pkg/backend/session",
        "//pkg/database",
        "//pkg/javascript",
        "//pkg/util/constants",
        "//pkg/vt",
        "//pkg/whois",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_vingarcia_ksql//:ksql",
    ],
)
