load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "basehash",
    srcs = ["manager.go"],
    importpath = "lophiid/pkg/basehash",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/database",
        "//pkg/database/models",
        "//pkg/util",
    ],
)
