load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "database",
    srcs = [
        "database.go",
        "hashing.go",
        "query.go",
    ],
    importpath = "lophiid/pkg/database",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_vingarcia_ksql//:ksql",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "database_test",
    srcs = [
        "hashing_test.go",
        "query_test.go",
    ],
    embed = [":database"],
    deps = ["@com_github_jackc_pgx_v5//pgtype"],
)
