load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "database",
    srcs = [
        "database.go",
        "fake_database.go",
        "hashing.go",
        "query.go",
        "stat_client.go",
    ],
    importpath = "lophiid/pkg/database",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/database/models",
        "//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@com_github_vingarcia_ksql//:ksql",
    ],
)

go_test(
    name = "database_test",
    srcs = [
        "hashing_test.go",
        "query_test.go",
    ],
    embed = [":database"],
    deps = [
        "//pkg/database/models",
        "@com_github_jackc_pgx_v5//pgtype",
    ],
)
