load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "downloader",
    srcs = ["downloader.go"],
    importpath = "loophid/pkg/downloader",
    visibility = ["//visibility:public"],
    deps = ["//pkg/database"],
)

go_test(
    name = "downloader_test",
    srcs = ["downloader_test.go"],
    embed = [":downloader"],
)
