load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "html",
    srcs = ["scrape.go"],
    importpath = "lophiid/pkg/html",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_net//html"],
)

go_test(
    name = "html_test",
    srcs = ["scrape_test.go"],
    embed = [":html"],
)
