load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "javascript",
    srcs = [
        "goja.go",
        "metrics.go",
    ],
    importpath = "lophiid/pkg/javascript",
    visibility = ["//visibility:public"],
    deps = [
        "//backend_service",
        "//pkg/database",
        "//pkg/metrics",
        "//pkg/util",
        "@com_github_dop251_goja//:goja",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)

go_test(
    name = "javascript_test",
    srcs = ["goja_test.go"],
    embed = [":javascript"],
    deps = [
        "//backend_service",
        "//pkg/database",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
    ],
)
