load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "javascript",
    srcs = [
        "command_runner.go",
        "crypto.go",
        "database.go",
        "encoding.go",
        "goja.go",
        "logger.go",
        "metrics.go",
        "time.go",
        "wrappers.go",
    ],
    importpath = "lophiid/pkg/javascript",
    visibility = ["//visibility:public"],
    deps = [
        "//backend_service",
        "//pkg/backend/extractors",
        "//pkg/backend/responder",
        "//pkg/database",
        "//pkg/database/models",
        "//pkg/metrics",
        "//pkg/util",
        "//pkg/util/decoding",
        "@com_github_dop251_goja//:goja",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)

go_test(
    name = "javascript_test",
    srcs = [
        "command_runner_test.go",
        "goja_test.go",
    ],
    embed = [":javascript"],
    deps = [
        "//backend_service",
        "//pkg/backend/extractors",
        "//pkg/backend/responder",
        "//pkg/database",
        "//pkg/database/models",
        "//pkg/util/constants",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
    ],
)
