load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "llm",
    srcs = [
        "config.go",
        "llm.go",
        "llm_manager.go",
        "metrics.go",
        "mock_llm_manager.go",
        "openai.go",
    ],
    importpath = "lophiid/pkg/llm",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/metrics",
        "//pkg/util",
        "//pkg/util/constants",
        "@com_github_invopop_jsonschema//:jsonschema",
        "@com_github_openai_openai_go_v2//:openai-go",
        "@com_github_openai_openai_go_v2//option",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_sourcegraph_conc//pool",
    ],
)

go_test(
    name = "llm_test",
    srcs = ["llm_manager_test.go"],
    embed = [":llm"],
    deps = [
        "//pkg/util",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
    ],
)
