load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = [
        "general.go",
        "logging.go",
        "net.go",
        "security.go",
        "string_map_cache.go",
    ],
    importpath = "loophid/pkg/util",
    visibility = ["//visibility:public"],
)

go_test(
    name = "util_test",
    srcs = [
        "net_test.go",
        "string_map_cache_test.go",
    ],
    embed = [":util"],
)
