load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = [
        "command.go",
        "contains.go",
        "general.go",
        "logging.go",
        "net.go",
        "security.go",
        "string_map_cache.go",
        "versioning.go",
    ],
    importpath = "lophiid/pkg/util",
    visibility = ["//visibility:public"],
    deps = ["@com_github_blang_semver_v4//:semver"],
)

go_test(
    name = "util_test",
    srcs = [
        "command_test.go",
        "general_test.go",
        "net_test.go",
        "string_map_cache_test.go",
        "versioning_test.go",
    ],
    embed = [":util"],
)
