load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = [
        "command.go",
        "compare.go",
        "contains.go",
        "general.go",
        "llm.go",
        "logging.go",
        "net.go",
        "queue.go",
        "security.go",
        "string_map_cache.go",
        "versioning.go",
    ],
    importpath = "lophiid/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_blang_semver_v4//:semver",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)

go_test(
    name = "util_test",
    srcs = [
        "command_test.go",
        "general_test.go",
        "llm_test.go",
        "net_test.go",
        "string_map_cache_test.go",
        "versioning_test.go",
    ],
    embed = [":util"],
)
