load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vt",
    srcs = [
        "manager.go",
        "vt.go",
    ],
    importpath = "loophid/pkg/vt",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/database",
        "//pkg/util",
    ],
)

go_test(
    name = "vt_test",
    srcs = [
        "manager_test.go",
        "vt_test.go",
    ],
    embed = [":vt"],
    deps = ["//pkg/database"],
)
