load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vt",
    srcs = [
        "manager.go",
        "metrics.go",
        "vt.go",
    ],
    importpath = "loophid/pkg/vt",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/database",
        "//pkg/metrics",
        "//pkg/util",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)

go_test(
    name = "vt_test",
    srcs = [
        "manager_test.go",
        "vt_test.go",
    ],
    embed = [":vt"],
    deps = [
        "//pkg/database",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)
